[tool.poetry]
name = "agri-data-toolkit"
version = "0.1.0"
description = "Agricultural Data Analytics Course - Python toolkit for US row crop data"
authors = ["Clayton Young <claytoneyoung+github@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/borealBytes/agri-data-toolkit"
repository = "https://github.com/borealBytes/agri-data-toolkit"
keywords = ["agriculture", "geospatial", "precision-agriculture", "satellite-imagery", "crop-analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
geopandas = "^0.14.0"
rasterio = "^1.3.0"
shapely = "^2.0.0"
requests = "^2.31.0"
PyYAML = "^6.0.0"
tqdm = "^4.66.0"
click = "^8.1.0"
loguru = "^0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.5.0"
pre-commit = "^3.3.0"
jupyter = "^1.0.0"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=src/agri_toolkit --cov-report=html --cov-report=term"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
